# cc-gateway

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_zh.md  cargo
.github/workflows/: release.yml
Formula/: cc-gateway.rb
homebrew/: cc-gateway.rb  cc-switch-pro.rb
src/: balance.rs  interactive.rs  main.rs  mouse_tui.rs
src/commands/: config.rs  mod.rs  presets.rs  serve.rs  status.rs  test.rs  usage.rs
src/config/: mod.rs  presets.rs
src/database/: mod.rs
src/error/: mod.rs
src/interactive/: types.rs  widgets.rs
src/provider/: mod.rs
src/proxy/: handlers.rs  mod.rs  streaming.rs  thinking.rs  transform.rs
